2008-05-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        Add testcase.
        
        * http/tests/appcache/navigating-away-while-cache-attempt-in-progress-expected.txt: Added.
        * http/tests/appcache/navigating-away-while-cache-attempt-in-progress.html: Added.
        * http/tests/appcache/resources/navigating-away-while-cache-attempt-in-progress.manifest: Added.
        * http/tests/appcache/resources/slow-resource.php: Added.

2008-05-13  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        <rdar://problem/5841351> Turkish ISO 8859-9 encoding should be treated as CP1254

        * fast/encoding/char-decoding-expected.txt:
        * fast/encoding/char-decoding.html:
        Added tests for Turkish encodings.

2008-05-12  Adam Roben  <aroben@apple.com>

        Test that NPN_PostURL works correctly

        Reviewed by Anders Carlsson.

        * http/tests/plugins/post-url-file-expected.txt: Added.
        * http/tests/plugins/post-url-file.html: Added.
        * http/tests/plugins/resources/dump-post.pl: Added.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Add test with a manifest file that lists itself.
        
        * http/tests/appcache/manifest-containing-itself-expected.txt: Added.
        * http/tests/appcache/manifest-containing-itself.html: Added.
        * http/tests/appcache/resources/manifest-containing-itself.manifest: Added.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        * http/tests/appcache/empty-manifest-expected.txt: Added.
        * http/tests/appcache/empty-manifest.html: Added.
        * http/tests/appcache/resources/empty.manifest: Added.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Update the expected result.
        
        * http/tests/appcache/simple-expected.txt:

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Add simple appcache test.
