@@ -36,6 +36,24 @@ PASS decode('latin5', '%80') is 'U+20AC'
 PASS decode('latin5', '%9F') is 'U+0178'
 PASS decode('latin5', '%FD') is 'U+0131'
 PASS decode('windows-1254', '%80') is 'U+20AC'
+PASS decode('ISO-8859-13', '%A1') is 'U+201D'
+PASS decode('ISO-8859-13', '%A5') is 'U+201E'
+PASS decode('ISO-8859-13', '%B4') is 'U+201C'
+PASS decode('ISO-8859-13', '%FF') is 'U+2019'
+PASS decode('windows-1257', '%80') is 'U+20AC'
+PASS decode('windows-1257', '%B4') is 'U+00B4'
+PASS decode('windows-1257', '%FF') is 'U+02D9'
+PASS decode('iso-8859-7', '%A1') is 'U+2018'
+PASS decode('iso-8859-7', '%B5') is 'U+0385'
+PASS decode('iso-8859-7', '%B6') is 'U+0386'
+PASS decode('windows-1253', '%80') is 'U+20AC'
+PASS decode('windows-1253', '%A1') is 'U+0385'
+PASS decode('windows-1253', '%B5') is 'U+00B5'
+PASS decode('windows-1253', '%B6') is 'U+00B6'
+PASS decode('KOI8-R', '%A4') is 'U+2553'
+PASS decode('KOI8-R', '%AD') is 'U+255C'
+PASS decode('KOI8-U', '%A4') is 'U+0454'
+PASS decode('KOI8-U', '%AD') is 'U+0491'
 PASS successfullyParsed is true
 
 TEST COMPLETE
